JSW Devsb/src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CO_Code__c</fullName>
        <label>CO Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_Name__c</fullName>
        <label>CO Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Grp1from_Master__c</fullName>
        <label>Cust.Grp1from Master</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distri_Chnl__c</fullName>
        <label>Distri.Chnl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Districts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To District</label>
        <referenceTo>Districts__c</referenceTo>
        <relationshipLabel>Sales Order</relationshipLabel>
        <relationshipName>Sales_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>52</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>53</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Excise__c</fullName>
        <label>Excise</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <label>Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gr_Rate_mt__c</fullName>
        <label>Gross Rate (MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IN_Code__c</fullName>
        <label>IN Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_Name__c</fullName>
        <label>IN Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_O_P_Central_GST__c</fullName>
        <label>IN O/P Central GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IN_O_P_Integratd_GST__c</fullName>
        <label>IN O/P Integratd GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IN_O_P_State_GST__c</fullName>
        <label>IN O/P State GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incoterm__c</fullName>
        <label>Incoterm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investor_Comm__c</fullName>
        <label>Investor Comm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Quantity__c</fullName>
        <label>Invoice Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material_Desc__c</fullName>
        <label>Material Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Comm__c</fullName>
        <label>Middle Comm</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Of_STO_Date__c</fullName>
        <formula>MONTH(SO_STO_Date_Formula__c+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Of STO Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Booking</label>
        <referenceTo>Order_Request__c</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Qty__c</fullName>
        <label>Order Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Request_No__c</fullName>
        <label>Order Request No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Request_Number__c</fullName>
        <label>Order Request Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Request</label>
        <referenceTo>Order_Request__c</referenceTo>
        <relationshipLabel>Sales Order (Order Request)</relationshipLabel>
        <relationshipName>Sales_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordered_Quantity__c</fullName>
        <label>Ordered Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_No__c</fullName>
        <label>PO No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Qty__c</fullName>
        <formula>Ordered_Quantity__c  -  Order_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant_GST__c</fullName>
        <label>Plant GST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant Master</label>
        <referenceTo>Plant_Master__c</referenceTo>
        <relationshipLabel>Sales Order</relationshipLabel>
        <relationshipName>Sales_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant_Name__c</fullName>
        <label>Plant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Order</relationshipLabel>
        <relationshipName>Sales_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity__c</fullName>
        <formula>Order_Qty__c  -  Invoice_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_STO_Date_Formula__c</fullName>
        <formula>SO_STO_Date__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO/STO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_STO_Date__c</fullName>
        <label>SO/STO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_STO_Item__c</fullName>
        <label>SO/STO Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_STO_No__c</fullName>
        <externalId>true</externalId>
        <label>SO/STO No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Type__c</fullName>
        <label>SO Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Code__c</fullName>
        <label>SP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Name__c</fullName>
        <label>SP Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Emp_Name__c</fullName>
        <label>Sales Emp Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Emp__c</fullName>
        <label>Sales Emp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Employee</label>
        <referenceTo>Business_Partner__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Grp_Desc__c</fullName>
        <label>Sales Grp Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Grp__c</fullName>
        <label>Sales Grp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Off_Desc__c</fullName>
        <label>Sales Off Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Off__c</fullName>
        <label>Sales Off</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City_Name__c</fullName>
        <label>Ship To City Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Party_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Party ID</label>
        <referenceTo>Ship_To_Party__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Sales_District_Desc__c</fullName>
        <label>Ship To Sales District Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Sales_District__c</fullName>
        <label>Ship To Sales District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shp_To_Party_Name__c</fullName>
        <label>Shp To Party Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shp_To_Party__c</fullName>
        <label>Shp To Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To District</label>
        <referenceTo>Districts__c</referenceTo>
        <relationshipLabel>Sales Order (Sold To District)</relationshipLabel>
        <relationshipName>Sales_Order1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To_Party_Name__c</fullName>
        <label>Sold To Party Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Party__c</fullName>
        <label>Sold To Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Sales_District_Desc__c</fullName>
        <label>Sold To Sales District Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Sales_District__c</fullName>
        <label>Sold To Sales District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_State__c</fullName>
        <label>Sold To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Sales Order</relationshipLabel>
        <relationshipName>Sales_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Orders</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>SO_STO_No__c</columns>
        <columns>SO_STO_Date_Formula__c</columns>
        <columns>Order_Qty__c</columns>
        <columns>Net_Price__c</columns>
        <columns>Ship_To_Sales_District_Desc__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_15_Days_Orders</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>SO_STO_No__c</columns>
        <columns>SO_STO_Date_Formula__c</columns>
        <columns>Material__c</columns>
        <columns>Material_Desc__c</columns>
        <columns>Order_Qty__c</columns>
        <columns>Net_Price__c</columns>
        <columns>Ship_To_Sales_District__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SO_STO_Date_Formula__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:15</value>
        </filters>
        <label>Last 15 Days Orders</label>
    </listViews>
    <listViews>
        <fullName>Last_30_Days_Orders</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>SO_STO_No__c</columns>
        <columns>SO_STO_Date_Formula__c</columns>
        <columns>Material__c</columns>
        <columns>Material_Desc__c</columns>
        <columns>Order_Qty__c</columns>
        <columns>Net_Price__c</columns>
        <columns>Ship_To_Sales_District__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SO_STO_Date_Formula__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Last 30 Days Orders</label>
    </listViews>
    <listViews>
        <fullName>Last_7_Days_Orders</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>SO_STO_No__c</columns>
        <columns>SO_STO_Date_Formula__c</columns>
        <columns>Material__c</columns>
        <columns>Material_Desc__c</columns>
        <columns>Order_Qty__c</columns>
        <columns>Net_Price__c</columns>
        <columns>Ship_To_Sales_District__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SO_STO_Date_Formula__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Last 7 Days Orders</label>
    </listViews>
    <listViews>
        <fullName>My_Sales_Orders</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>SO_STO_No__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Material__c</columns>
        <columns>Material_Desc__c</columns>
        <columns>Order_Qty__c</columns>
        <columns>Net_Price__c</columns>
        <columns>Ship_To_Sales_District__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Sales Orders</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Orders</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>SO_STO_No__c</columns>
        <columns>SO_STO_Date_Formula__c</columns>
        <columns>Material__c</columns>
        <columns>Material_Desc__c</columns>
        <columns>Order_Qty__c</columns>
        <columns>Net_Price__c</columns>
        <columns>Ship_To_Sales_District__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SO_STO_Date_Formula__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Orders</label>
    </listViews>
    <nameField>
        <displayFormat>O-{00000000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>